[release-1.5] chore(marketplace): various catalog metadata fixes (#2650)
* chore(marketplace): various catalog metadata fixes (#2637)

* Update jira.yaml

* Update 3scale.yaml

* Update azure-repositories.yaml

* Update azure-repositories.yaml

* Update github-pull-requests.yaml

* Update github-scaffolder-actions.yaml

* Update nexus-repository-manager.yaml

* Update github-issues.yaml

* Update extensions.yaml

* Update roadie-argocd.yaml

* Update topology.yaml

* Update backstage-community-plugin-quay.yaml

* Update azure-container-registry.yaml

* Update ansible-plugin.yaml

* Update datadog.yaml

* Update lighthouse.yaml

* Update openshift-cluster-manager.yaml

* Update ldap-catalog-integration.yaml

* Update openshift-cluster-manager.yaml

* chore(marketplace): rename boilerplate

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(marketplace): convert categories to an array

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>
Co-authored-by: Ben Wilcock <benwilcock@gmail.com>

--- a/catalog-entities/marketplace/plugins/extensions.yaml
+++ b/catalog-entities/marketplace/plugins/extensions.yaml
@@ -26,11 +26,11 @@ spec:
   author: Red Hat
   publisher: Red Hat
   support: dev-preview
-  lifecycle: production
+  lifecycle: active
 
   categories:    
-    - Marketplace
-    
+    - Extensions
+
   highlights: 
     - Provides a catalog of available plugins for Red Hat Developer Hub
     - Browse the available plugins 
