feat(ci): add [skip-build] tag support to bypass image build (#2910)
* Test RHDH 1.6.1 RC

Signed-off-by: Gustavo Lira <guga.java@gmail.com>

* feat: add [skip-build] check to skip unnecessary builds

Signed-off-by: Gustavo Lira <guga.java@gmail.com>

* feat: add [skip-build] check to skip unnecessary builds

Signed-off-by: Gustavo Lira <guga.java@gmail.com>

* feat: add [skip-build] check to skip unnecessary builds

Signed-off-by: Gustavo Lira <guga.java@gmail.com>

* feat: add [skip-build] check to skip unnecessary builds

Signed-off-by: Gustavo Lira <guga.java@gmail.com>

---------

Signed-off-by: Gustavo Lira <guga.java@gmail.com>

--- a/.github/actions/check-image-and-changes/action.yaml
+++ b/.github/actions/check-image-and-changes/action.yaml
@@ -8,6 +8,9 @@ outputs:
   relevant_changes:
     description: "True if changes require a build"
     value: ${{ steps.changes.outputs.relevant }}
+  is_skipped:
+    description: "True if build should be skipped (via [skip-build] tag)"
+    value: ${{ steps.changes.outputs.is_skipped }}
   short_sha:
     description: "Short SHA of the latest commit"
     value: ${{ env.SHORT_SHA }}
@@ -43,11 +46,23 @@ runs:
         BASE_COMMIT=${{ github.event.pull_request.base.sha }}
         HEAD_COMMIT=${{ github.event.pull_request.head.sha }}
 
+        # Default to not skipped
+        echo "is_skipped=false" >> $GITHUB_OUTPUT
+
+        # Get changed files
         CHANGED_FILES=$(git diff --name-only "$BASE_COMMIT" "$HEAD_COMMIT")
 
         echo "Changed files:"
         echo "$CHANGED_FILES"
 
+        # Check if commit message contains [skip-build]
+        COMMIT_MSG=$(git log -1 --pretty=%B)
+        if [[ "$COMMIT_MSG" == *"[skip-build]"* ]]; then
+          echo "Commit message contains [skip-build], marking as skipped"
+          echo "is_skipped=true" >> $GITHUB_OUTPUT
+        fi
+
+        # Check if changes are relevant for build
         if echo "$CHANGED_FILES" | grep -qvE '^(e2e-tests/|\.ibm/)'; then
           echo "Changes detected outside the e2e-tests or .ibm folders. Build required."
           echo "relevant=true" >> $GITHUB_OUTPUT
