test: refactor auth providers job  (#2972)
* refactor auth providers job

* fix gh auth flow

* fix image tag

* fix image tag

* enable all providers scenarios

* remove workers setting

* adjust token duration

* adjust token duration

* adjust token duration

* fix errors

--- a/e2e-tests/.gitignore
+++ b/e2e-tests/.gitignore
@@ -68,3 +68,8 @@ site
 
 # e2e test results
 junit-results.xml
+
+# auth-providers local runs files
+**/app-config.test.yaml
+**/dynamic-plugins.test.yaml
+**/rbac.test.csv
