--- a/.github/workflows/next-build-image.yaml
+++ b/.github/workflows/next-build-image.yaml
@@ -46,6 +46,7 @@ jobs:
           - ubuntu-24.04-arm
           - ubuntu-24.04
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 720 # Set to 12 hours instead of default 360 = 6hrs
     permissions:
       contents: read
       packages: write
