--- a/.ibm/pipelines/value_files/values_showcase.yaml
+++ b/.ibm/pipelines/value_files/values_showcase.yaml
@@ -248,6 +248,8 @@ upstream:
         value: 'true'
       - name: NODE_TLS_REJECT_UNAUTHORIZED
         value: '0'
+      - name: NODE_ENV
+        value: 'production'
       - name: ENABLE_CORE_ROOTHTTPROUTER_OVERRIDE
         value: 'true' 
     extraAppConfig:
