--- a/.github/workflows/next-build-image.yaml
+++ b/.github/workflows/next-build-image.yaml
@@ -152,7 +152,7 @@ jobs:
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v3
 
-        - name: Set container metadata (for :next build)
+        - name: Set container metadata (for :next builds)
           id: meta-next
           if: ${{ env.REF_NAME_SHORT == 'next'}}
           uses: docker/metadata-action@v5
@@ -187,6 +187,14 @@ jobs:
             docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
               $(printf '${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
 
-        - name: Inspect image
+        - name: Inspect image (for :next builds)
+          id: inspect-next
+          if: ${{ env.REF_NAME_SHORT == 'next'}}
           run: |
-            docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+            docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}:${{ steps.meta-next.outputs.version }}
+
+        - name: Inspect image (for releases)
+          id: inspect-release
+          if: ${{ env.REF_NAME_SHORT != 'next'}}
+          run: |
+            docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}:${{ steps.meta-release.outputs.version }}
