--- a/.github/workflows/next-build-image.yaml
+++ b/.github/workflows/next-build-image.yaml
@@ -173,6 +173,7 @@ jobs:
               type=raw,value=${{ env.REF_NAME }}-${{ env.SHORT_SHA }}
               type=raw,value=${{ env.REF_NAME_SHORT }}
               type=raw,value=${{ env.REF_NAME_SHORT }}-${{ env.SHORT_SHA }}
+            imageLabels: quay.expires-after=365d
 
         - name: Login to Docker Hub
           uses: docker/login-action@v3
