chore(release): apply changes from main for RHIDP-8172 and RHIDP-8256
Signed-off-by: Nick Boldt <nboldt@redhat.com>

--- a/.github/workflows/next-build-image.yaml
+++ b/.github/workflows/next-build-image.yaml
@@ -27,6 +27,8 @@ on:
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
       - '[0-9]+.[0-9]+'
+    branches:
+      - 'release-**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -71,12 +73,19 @@ jobs:
           ref_name=${{ github.ref_name }}
           if [ "$ref_name" == "main" ]; then
             ref_name="next"
+          elif [[ "$ref_name" =~ ^release-([0-9]+)\.([0-9]+) ]]; then
+            # next-1.y
+            ref_name="next-${BASH_REMATCH[1]}.${BASH_REMATCH[2]}"
           fi
-          # from 1.6.1 => 1.6
-          ref_name_short="${ref_name%.*}"
-          if [[ $ref_name_short == "1" ]]; then
-            ref_name_short="${ref_name}"
+          ref_name_short="${ref_name}"
+
+          # for releases only
+          if [[ $ref_name != "next" ]] && [[ $ref_name != "next-"* ]]; then
+            # shroten from 1.6.1 => 1.6
+            ref_name_short="${ref_name%.*}"
+            if [[ $ref_name_short == "1" ]]; then ref_name_short="${ref_name}"; fi
           fi
+
           echo "REF_NAME=$ref_name" >> $GITHUB_ENV
           echo "REF_NAME_SHORT=${ref_name_short}" >> $GITHUB_ENV
           echo "PLATFORM=$platform" >> $GITHUB_ENV
@@ -89,7 +98,7 @@ jobs:
       - name: Build and Push with Buildx (for :next builds, 14d expiry)
         uses: ./.github/actions/docker-build
         id: build-next
-        if: ${{ env.REF_NAME_SHORT == 'next' }}
+        if: ${{ env.REF_NAME_SHORT == 'next' || env.REF_NAME_SHORT == 'next-'* }}
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.QUAY_USERNAME }}
@@ -105,7 +114,7 @@ jobs:
       - name: Build and Push with Buildx (for releases, 183d expiry)
         uses: ./.github/actions/docker-build
         id: build-release
-        if: ${{ env.REF_NAME_SHORT != 'next' }}
+        if: ${{ env.REF_NAME_SHORT != 'next' && env.REF_NAME_SHORT != 'next-'* }}
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.QUAY_USERNAME }}
@@ -120,7 +129,7 @@ jobs:
 
       - name: Export digest (for :next builds)
         id: export-digest-next
-        if: ${{ env.REF_NAME_SHORT == 'next' }}
+        if: ${{ env.REF_NAME_SHORT == 'next' || env.REF_NAME_SHORT == 'next-'* }}
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build-next.outputs.digest }}"
@@ -128,7 +137,7 @@ jobs:
 
       - name: Export digest (for releases)
         id: export-digest-release
-        if: ${{ env.REF_NAME_SHORT != 'next' }}
+        if: ${{ env.REF_NAME_SHORT != 'next' && env.REF_NAME_SHORT != 'next-'* }}
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build-release.outputs.digest }}"
@@ -181,7 +190,7 @@ jobs:
 
         - name: Set container metadata (for :next builds, 14d expiry)
           id: meta-next
-          if: ${{ env.REF_NAME_SHORT == 'next'}}
+          if: ${{ env.REF_NAME_SHORT == 'next' || env.REF_NAME_SHORT == 'next-'* }}
           uses: docker/metadata-action@v5
           with:
             images: ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}
@@ -193,7 +202,7 @@ jobs:
 
         - name: Set container metadata (for releases, 183d expiry)
           id: meta-release
-          if: ${{ env.REF_NAME_SHORT != 'next' }}
+          if: ${{ env.REF_NAME_SHORT != 'next' && env.REF_NAME_SHORT != 'next-'* }}
           uses: docker/metadata-action@v5
           with:
             images: ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}
@@ -220,12 +229,12 @@ jobs:
 
         - name: Inspect image (for :next builds)
           id: inspect-next
-          if: ${{ env.REF_NAME_SHORT == 'next'}}
+          if: ${{ env.REF_NAME_SHORT == 'next' || env.REF_NAME_SHORT == 'next-'* }}
           run: |
             docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}:${{ steps.meta-next.outputs.version }}
 
         - name: Inspect image (for releases)
           id: inspect-release
-          if: ${{ env.REF_NAME_SHORT != 'next'}}
+          if: ${{ env.REF_NAME_SHORT != 'next' && env.REF_NAME_SHORT != 'next-'* }}
           run: |
             docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}:${{ steps.meta-release.outputs.version }}
