chore: only allow push to trigger if PR build succeeded
Signed-off-by: Frank Kong <frkong@redhat.com>

rh-pre-commit.version: 2.3.2
rh-pre-commit.check-secrets: ENABLED

--- a/.github/workflows/podman_push.yaml
+++ b/.github/workflows/podman_push.yaml
@@ -26,6 +26,7 @@ jobs:
   podman-push:
     name: Push Podman Image to Registry
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
     permissions:
       contents: read
       issues: write
