--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -31,7 +31,7 @@ concurrency:
 
 jobs:
   authorize:
-    # The 'external' environment is configured with the odo-maintainers team as required reviewers.
+    # The 'external' environment is configured with the maintainers team as required reviewers.
     # All the subsequent jobs in this workflow 'need' this job, which will require manual approval for PRs coming from external forks.
     # see list of approvers in OWNERS file
     environment:
