chore: update workflow name to not conflict with existing pr build workflow
Signed-off-by: Frank Kong <frkong@redhat.com>

rh-pre-commit.version: 2.3.2
rh-pre-commit.check-secrets: ENABLED

--- a/.github/workflows/podman_push.yaml
+++ b/.github/workflows/podman_push.yaml
@@ -3,7 +3,7 @@ name: Podman Push
 on:
   workflow_run:
     workflows:
-      - 'PR Build Image'
+      - 'PR Build Image (Hermetic)'
     types:
       - completed
   workflow_call:
