chore: revert the workflow name change
rh-pre-commit.version: 2.3.2
rh-pre-commit.check-secrets: ENABLED

--- a/.github/workflows/podman_push.yaml
+++ b/.github/workflows/podman_push.yaml
@@ -3,7 +3,7 @@ name: Podman Push
 on:
   workflow_run:
     workflows:
-      - 'PR Build Image (Hermetic)'
+      - 'PR Build Image'
     types:
       - completed
   workflow_call:
