--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -97,7 +97,7 @@ jobs:
         if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
         run: |
           echo "${SL_TOKEN}" > sltoken.txt
-          echo "Token last 7 chars: ...${SL_TOKEN: -7}"
+          echo "Token last 7 chars : ...${SL_TOKEN: -7}"
         env:
           SL_TOKEN: '${{secrets.SL_TOKEN}}'
 
@@ -111,6 +111,8 @@ jobs:
 
       - name: Scan all packages with SealLight
         if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
+        env:
+          NODE_DEBUG: sl
         run: |
           # Define scan targets: workspace_path:module_id
           scan_targets=(
@@ -125,19 +127,47 @@ jobs:
           )
           
           # Common scan parameters
-          common_params="--tokenfile ./sltoken.txt --buildsessionidFile ./buildsessionid --scm none --projectroot ${{ github.workspace }}"
+          common_params="--tokenfile ./sltoken.txt --buildsessionidFile ./buildSessionId --scm none --projectroot ${{ github.workspace }}"
+          
+          # Verify build session file exists
+          if [[ ! -f ./buildSessionId ]]; then
+            echo "Error: buildsessionid file not found. SealLight session may not be properly initialized."
+            exit 1
+          fi
           
           # Scan each target
           for target in "${scan_targets[@]}"; do
             workspace_path="${target%:*}"
             module_id="${target#*:}"
+            full_path="${{ github.workspace }}/$workspace_path"
+            
             echo "Scanning $module_id at $workspace_path"
-            npx slnodejs scan $common_params --workspacepath "${{ github.workspace }}/$workspace_path" --uniqueModuleId "$module_id"
+            echo "Full path: $full_path"
+            
+            # Verify the path exists
+            if [[ ! -d "$full_path" ]]; then
+              echo "Warning: Directory $full_path does not exist, skipping scan for $module_id"
+              continue
+            fi
+            
+            # Run the scan with error handling
+            if ! npx slnodejs scan $common_params --workspacepath "$full_path" --uniqueModuleId "$module_id"; then
+              echo "Error: SealLight scan failed for $module_id at $full_path"
+              echo "Continuing with other scans..."
+              continue
+            fi
+            
+            echo "Successfully scanned $module_id"
           done
 
       - name: End SealLight build session
-        if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
-        run: npx slnodejs buildend --tokenfile ./sltoken.txt --buildsessionidFile ./buildsessionid --ok
+        if: ${{ steps.check-image.outputs.is_skipped != 'true' && always() }}
+        run: |
+          if [[ -f ./buildSessionId ]]; then
+            npx slnodejs buildend --tokenfile ./sltoken.txt --buildsessionidFile ./buildSessionId --ok
+          else
+            echo "Warning: buildSessionId file not found, cannot end SealLight session"
+          fi
 
   test:
     name: Test with Node.js ${{ matrix.node-version }}
@@ -215,7 +245,7 @@ jobs:
 
       - name: Start SealLight test stage
         if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
-        run: npx slnodejs start --tokenfile ./sltoken.txt --buildsessionidFile ./buildsessionid --teststage "Unit Tests"
+        run: npx slnodejs start --tokenfile ./sltoken.txt --buildsessionidFile ./buildSessionId --teststage "Unit Tests"
 
       - name: Run tests
         if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
@@ -223,7 +253,7 @@ jobs:
 
       - name: Upload JUnit XML report to SealLight
         if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
-        run: npx slnodejs uploadReports --tokenfile ./sltoken.txt --buildsessionidFile ./buildsessionid --reportFile "./jest-junit-results/junit.xml"
+        run: npx slnodejs uploadReports --tokenfile ./sltoken.txt --buildsessionidFile ./buildSessionId --reportFile "./jest-junit-results/junit.xml"
 
       - name: Upload coverage reports to SealLight
         if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
@@ -231,12 +261,12 @@ jobs:
           # Upload coverage reports from all packages
           find . -name "coverage-final.json" -path "*/coverage/*" | while read coverage_file; do
             echo "Uploading coverage report: $coverage_file"
-            npx slnodejs nycReport --tokenfile ./sltoken.txt --buildsessionidFile ./buildsessionid --report "$coverage_file"
+            npx slnodejs nycReport --tokenfile ./sltoken.txt --buildsessionidFile ./buildSessionId --report "$coverage_file"
           done
 
       - name: End SealLight test stage
         if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
-        run: npx slnodejs end --tokenfile ./sltoken.txt --buildsessionidFile ./buildsessionid
+        run: npx slnodejs end --tokenfile ./sltoken.txt --buildsessionidFile ./buildSessionId
       - name: Install dynamic plugin dependencies
         if: ${{ steps.check-image.outputs.is_skipped != 'true' }}
         run: cd ./dynamic-plugins && yarn install && cd ..
